Client: Fix incorrectly aligned save icon in nav sidebar

--- a/client/src/app/css/angular-material-theme.scss
+++ b/client/src/app/css/angular-material-theme.scss
@@ -70,10 +70,13 @@ mat-nav-list#main-nav {
     .mat-list-item {
         white-space: nowrap;
 
+        /* Ensure that the actual name of the target is never wrapped, has a sensible
+           minimum width but grows to fill all available space. */
         .nav-target {
             overflow: hidden;
             text-overflow: ellipsis;
             min-width: 16ch;
+            flex-grow: 1;
         }
     }
 }
